RESOLVED FIXED212308
ASSERTION FAILED: m_clientCounts.contains(contextId) - WebKit::VideoFullscreenManagerProxy::removeClientForContext()
https://bugs.webkit.org/show_bug.cgi?id=212308
Summary ASSERTION FAILED: m_clientCounts.contains(contextId) - WebKit::VideoFullscree...
Peng Liu
Reported 2020-05-23 17:29:12 PDT
ASSERTION FAILED: m_clientCounts.contains(contextId) - WebKit::VideoFullscreenManagerProxy::removeClientForContext()
Attachments
Patch (10.31 KB, patch)
2020-05-23 17:54 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-05-23 17:30:08 PDT
Peng Liu
Comment 2 2020-05-23 17:54:12 PDT
Peng Liu
Comment 3 2020-05-23 17:56:56 PDT
Any suggestion about the style checking error regarding OS version check? Should we update version_check.py to ignore it?
youenn fablet
Comment 4 2020-05-24 23:57:54 PDT
Comment on attachment 400145 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=400145&action=review > Tools/TestWebKitAPI/Tests/WebKitCocoa/ExitPiPOnSuspendVideoElement.mm:29 > +#if ENABLE(VIDEO_PRESENTATION_MODE) && (PLATFORM(MAC) || (PLATFORM(IOS_FAMILY) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 140000)) I guess we can leave it as is or introduce a macro in Platform.h.
EWS
Comment 5 2020-05-26 09:57:03 PDT
Committed r262149: <https://trac.webkit.org/changeset/262149> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400145 [details].
Note You need to log in before you can comment on or make changes to this bug.