Source/WebKit/UIProcess/Cocoa/VideoFullscreenManagerProxy.h
@@ -154,6 +154,8 @@ private:
     void addClientForContext(uint64_t contextId);
     void removeClientForContext(uint64_t contextId);
 
+    void hasVideoInPictureInPictureDidChange(bool);
+
     // Messages from VideoFullscreenManager
     void setupFullscreenWithID(uint64_t contextId, uint32_t videoLayerID, const WebCore::IntRect& initialRect, float hostingScaleFactor, WebCore::HTMLMediaElementEnums::VideoFullscreenMode, bool allowsPictureInPicture, bool standby);
     void setInlineRect(uint64_t contextId, const WebCore::IntRect& inlineRect, bool visible);
