Source/WebKit/UIProcess/Cocoa/VideoFullscreenManagerProxy.mm
@@ -291,6 +291,9 @@ void VideoFullscreenModelContext::willEnterPictureInPicture()
 
 void VideoFullscreenModelContext::didEnterPictureInPicture()
 {
+    if (m_manager)
+        m_manager->hasVideoInPictureInPictureDidChange(true);
+
     for (auto& client : m_clients)
         client->didEnterPictureInPicture();
 }
@@ -309,6 +312,9 @@ void VideoFullscreenModelContext::willExitPictureInPicture()
 
 void VideoFullscreenModelContext::didExitPictureInPicture()
 {
+    if (m_manager)
+        m_manager->hasVideoInPictureInPictureDidChange(false);
+
     for (auto& client : m_clients)
         client->didExitPictureInPicture();
 }
@@ -485,6 +491,11 @@ void VideoFullscreenManagerProxy::forEachSession(Function<void(VideoFullscreenMo
     }
 }
 
+void VideoFullscreenManagerProxy::hasVideoInPictureInPictureDidChange(bool value)
+{
+    m_page->uiClient().hasVideoInPictureInPictureDidChange(m_page, value);
+}
+
 #pragma mark Messages from VideoFullscreenManager
 
 void VideoFullscreenManagerProxy::setupFullscreenWithID(uint64_t contextId, uint32_t videoLayerID, const WebCore::IntRect& initialRect, float hostingDeviceScaleFactor, HTMLMediaElementEnums::VideoFullscreenMode videoFullscreenMode, bool allowsPictureInPicture, bool standby)
@@ -528,7 +539,6 @@ void VideoFullscreenManagerProxy::setupFullscreenWithID(uint64_t contextId, uint
     m_page->rootViewToWindow(initialRect, initialWindowRect);
     interface->setupFullscreen(*model->layerHostView(), initialWindowRect, m_page->platformWindow(), videoFullscreenMode, allowsPictureInPicture);
 #endif
-    m_page->uiClient().hasVideoInPictureInPictureDidChange(m_page, videoFullscreenMode & MediaPlayerEnums::VideoFullscreenModePictureInPicture);
 }
 
 void VideoFullscreenManagerProxy::setHasVideo(uint64_t contextId, bool hasVideo)
@@ -616,8 +626,9 @@ void VideoFullscreenManagerProxy::exitFullscreenWithoutAnimationToMode(uint64_t 
     [model->layerHostView() removeFromSuperview];
     model->setLayerHostView(nullptr);
     removeClientForContext(contextId);
-    m_page->uiClient().hasVideoInPictureInPictureDidChange(m_page, targetMode & MediaPlayerEnums::VideoFullscreenModePictureInPicture);
 #endif
+
+    hasVideoInPictureInPictureDidChange(targetMode & MediaPlayerEnums::VideoFullscreenModePictureInPicture);
 }
 
 #if PLATFORM(IOS_FAMILY)
@@ -780,7 +791,6 @@ void VideoFullscreenManagerProxy::setVideoLayerGravity(uint64_t contextId, WebCo
 
 void VideoFullscreenManagerProxy::fullscreenModeChanged(uint64_t contextId, WebCore::HTMLMediaElementEnums::VideoFullscreenMode mode)
 {
-    m_page->uiClient().hasVideoInPictureInPictureDidChange(m_page, mode & MediaPlayerEnums::VideoFullscreenModePictureInPicture);
     m_page->send(Messages::VideoFullscreenManager::FullscreenModeChanged(contextId, mode));
 }
 
